--- a/variables.css
+++ b/variables.css
@@ -1,1 +1,21 @@
+<style>
+:root {
+--brand-color: #f5efe1;
+--dark-color: #161616;
+--mid-color: #666666;
+--light-color: #FFFFFF;
+--header-font-family: "Times New Roman", Times, serif; 
+--p-font-family: "Lucida Console", "Courier New", monospace;
+  
+  @fontface {
+    font-family: serif
+  
+  }
+  
+  
+  
+ 
+
+
+
 
