--- a/variables.css
+++ b/variables.css
@@ -6,6 +6,7 @@
 --light-color: #FFFFFF;
 --header-font-family: "Times New Roman", Times, serif; 
 --p-font-family: "Lucida Console", "Courier New", monospace;
+}
   
   @fontface {
     font-family: serif
