--- a/palettes.css
+++ b/palettes.css
@@ -1,1 +1,39 @@
+         /* El Lissitzky */
+
+/* CSS HEX PROUN classic */
+--valencia: #d83539;
+--outer-space: #1f302e;
+--westar: #e0ddd4;
+--old-rose: #c88a7c;
+--chestnut-rose: #cb715a;
+--tumbleweed: #e1ae8d;
+--cadet-blue: #a1b6c2;
+--cameo: #e0bba4;
+--sirocco: #6c8484;
+
+
+/* CSS HEX Proun 1 D gray */
+--shark: #1e1e1f;
+--quill-gray: #d5d6d4;
+--concord: #7f7a77;
+--zorba: #9d9892;
+--dorado: #635c59;
+--delta: #a9a9a8;
+--dawn: #a6a49a;
+--cement: #857261;
+--cutty-sark: #50646c;
+
+
+/* CSS HEX PROUN cherokee */
+--cherokee: #fbdaa0;
+--abbey: #4b4b4e;
+--thunderbird: #c32814;
+--oslo-gray: #88898e;
+--teak: #b58867;
+--silver-sand: #b0b3b4;
+--wafer: #e4d6d2;
+--santa-fe: #b27047;
+--juniper: #7c9490;
+
+
 
