--- a/palettes.css
+++ b/palettes.css
@@ -12,7 +12,7 @@
 --sirocco: #6c8484;
 
 
-/* CSS HEX Proun 1 D gray */
+/* CSS HEX PROUN.1D gray */
 --shark: #1e1e1f;
 --quill-gray: #d5d6d4;
 --concord: #7f7a77;
@@ -36,4 +36,14 @@
 --juniper: #7c9490;
 
 
+/* CSS HEX PROUN fall-green */
+--log-cabin: #1d291b;
+--fall-green: #ebedbc;
+--gimblet: #b3bf78;
+--norway: #9bb295;
+--desert-storm: #f2f2f0;
+--mule-fawn: #885a2e;
+--asparagus: #83944f;
+--laurel: #6a9676;
+--gray-olive: #acac92;
 
