Update and rename palettes.css to Bauhaus-palettes.css

--- a/Bauhaus-palettes.css
+++ b/Bauhaus-palettes.css
@@ -1,4 +1,4 @@
-         /* El Lissitzky */
+/* Lissitzky "Proun" CSS HEX */
 
 /* CSS HEX PROUN classic */
 --valencia: #d83539;
@@ -46,4 +46,32 @@
 --asparagus: #83944f;
 --laurel: #6a9676;
 --gray-olive: #acac92;
+
+
+/* BAUHAUS CSS HEX */
+
+/* CSS HEX tamarillio - Anni Alberg */
+--cognac: #ad3b1e;
+--gold-sand: #e7bb7d;
+--zeus: #2f2b22;
+--tussock: #c99055;
+--ship-cove: #6b8bb2;
+--nutmeg: #713325;
+--flame-pea: #de5b3c;
+--coral-tree: #aa6664;
+--tamarillo: #8f1316;
+
+
+/* CSS HEX careys-pink - Gunta Stölzl '369' */
+--chalet-green: #44683c;
+--violet-red: #f23f9c;
+--wild-rice: #e7ea83;
+--careys-pink: #d7a4b1;
+--luxor-gold: #917f2c;
+--hopbush: #d47aae;
+--au-chico: #935a6a;
+--lavender-magenta: #e973d4;
+--mantis: #6bbc5c;
+
+
 
