--- a/variables.css
+++ b/variables.css
@@ -4,5 +4,7 @@
 --dark-color: #155E75;
 --mid-color: #E5E7EB;
 --light-color: #F8FAFC;
+--header-font-family: "Times New Roman", Times, serif; 
+--p-font-family: "Lucida Console", "Courier New", monospace;
   }
 </style>
