--- a/Bauhaus-palett.css
+++ b/Bauhaus-palett.css
@@ -1,6 +1,10 @@
      /* BAUHAUS COLOR-PALETT CSS HEX */
 
 /* CSS HEX bauhaus-primary */
+--red: #ff0000;
+--blue: #0000ff;
+--yellow: #ffff00;
+  /* 1923 poster */
 --american-red: #be1e2d;
 --metallic-yellow: #ffde17;
 --dark-cornflower-blue: #21409a;
